# gems-seeker-bot

./: .gitignore  .gitmodules  .stylish-haskell.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cabal.project  gems-seeker-bot.cabal
.githooks/: pre-commit
app/: Main.hs
scripts/: install-hooks.sh
src/mac/Mac/: Gesture.hs  Mirror.hs  Native.h  Native.hs  Native.m
src/search/: Board.hs  Solve.hs
src/search/Search/: Dijkstra.hs
src/vision/: Image.hs
src/vision/Image/: Frame.hs  Zncc.hs
src/vision/Vision/: Board.hs  Screen.hs
test/: Spec.hs
test/fixtures/frames/: live-brown-window.board  live-orange-window.board  live-purple-window.board  live-window.board  scene1.board
