cabal-version:      3.4
name:               gems-seeker-bot
version:            0.3.1.0
synopsis:           Automated macOS solver for the Gem Seeker minigame.
license:            BSD-3-Clause
license-file:       LICENSE
author:             axionbuster
maintainer:         axionbuster@gmail.com
build-type:         Simple
tested-with:        GHC == 9.14.1
extra-doc-files:    CLAUDE.md
                  , README.md
                  , CHANGELOG.md
                  , LICENSE
extra-source-files: assets/readme/*.png
                  , assets/templates/*.png
                  , src/mac/Mac/Native.h
                  , test/fixtures/cases/*.out
                  , test/fixtures/cases/*.txt
                  , test/fixtures/frames/*.board
                  , test/fixtures/frames/*.png

-- Shared settings. StrictData (NOT Strict — see CLAUDE.md) gives strict fields;
-- add {-# UNPACK #-} on simple fields to keep numbers out of boxes.
common shared
    default-language:   GHC2024
    default-extensions: StrictData
    ghc-options:        -Wall

-- Optimisation only matters in the perf-critical halves: board search & vision.
common perf
    ghc-options:        -O2

-- The search library: board state, physics, and shortest-path search.
library gsb-search
    import:           shared, perf
    hs-source-dirs:   src/search
    exposed-modules:  Board
                    , Search.Dijkstra
                    , Solve
    build-depends:    base ^>= 4.22.0.0
                    , array >= 0.5.8 && < 0.6
                    , containers >= 0.8 && < 0.9
                    , hashable >= 1.5.1 && < 1.6
                    , psqueues >= 0.2.8 && < 0.3
                    , transformers >= 0.6 && < 0.7
                    , unordered-containers >= 0.2.21 && < 0.3

-- The vision library: image ops plus board parsing from captured frames.
library gsb-vision
    import:           shared, perf
    hs-source-dirs:   src/vision
    exposed-modules:  Image
                    , Image.Zncc
                    , Image.Frame
                    , Vision.Board
                    , Vision.Screen
    build-depends:    base ^>= 4.22.0.0
                    , JuicyPixels >= 3.3.9 && < 3.4
                    , array >= 0.5.8 && < 0.6
                    , vector >= 0.13.2 && < 0.14
                    , gems-seeker-bot:gsb-search

-- The hands: macOS window geometry, frame grab, and swipe gestures. Darwin only.
library gsb-mac
    import:           shared
    hs-source-dirs:   src/mac
    exposed-modules:  Mac.Mirror
                    , Mac.Gesture
    other-modules:    Mac.Native
    if !os(osx)
        buildable: False
    c-sources:        src/mac/Mac/Native.m
    include-dirs:     src/mac/Mac
    includes:         Native.h
    cc-options:       -fobjc-arc
                      -fblocks
    frameworks:       AppKit
                    , ApplicationServices
                    , AVFoundation
                    , CoreGraphics
                    , CoreMedia
                    , Foundation
                    , ScreenCaptureKit
    build-depends:    base ^>= 4.22.0.0
                    , JuicyPixels >= 3.3.9 && < 3.4
                    , directory >= 1.3.8 && < 1.4
                    , filepath >= 1.5.4 && < 1.6
                    , time >= 1.14 && < 1.15
                    , unliftio >= 0.2.25 && < 0.3
                    , vector >= 0.13.2 && < 0.14
                    , gems-seeker-bot:gsb-search

-- The bot: parse a board, solve it, replay the swipes. Darwin only.
executable gems-seeker-bot
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   app
    if !os(osx)
        buildable: False
    build-depends:    base ^>= 4.22.0.0
                    , gems-seeker-bot:gsb-search
                    , gems-seeker-bot:gsb-vision
                    , gems-seeker-bot:gsb-mac

test-suite gsb-test
    import:           shared
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base ^>= 4.22.0.0
                    , directory >= 1.3.8 && < 1.4
                    , hspec >= 2.11.17 && < 2.12
                    , time >= 1.14 && < 1.15
                    , gems-seeker-bot:gsb-search
                    , gems-seeker-bot:gsb-vision
    -- Mac libs are Darwin-only; the whole project targets macOS anyway.
    if os(osx)
        build-depends: gems-seeker-bot:gsb-mac
        cpp-options:   -DDARWIN
